# left-pad-rust

./: Cargo.toml
src/: main.rs
