[package]
name = "left-pad"
version = "0.0.1"
edition = "2021"
authors = ["rewrite0w0"]
description = "left-pad is written in Rust."

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
